// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styleguideColorHandler getTeamsMessage method for created notification should match snapshot for every possible styleguide platform 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure \`colors.xml\` is up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for created notification should match snapshot for every possible styleguide platform 2`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure \`UIColor\` category / extension is up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for created notification should match snapshot for every possible styleguide platform 3`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure \`NSColor\` category / extension is up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for created notification should match snapshot for every possible styleguide platform 4`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for created notification should match snapshot for every possible styleguide platform 5`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your styles are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for created notification should match snapshot when there are more than 1 events 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**2 colors** are added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%2CanotherColorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&cid=anotherColorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for created notification should match snapshot when there is only 1 event 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for updated notification should match snapshot for every possible styleguide platform 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure \`colors.xml\` is up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for updated notification should match snapshot for every possible styleguide platform 2`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure \`UIColor\` category / extension is up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for updated notification should match snapshot for every possible styleguide platform 3`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure \`NSColor\` category / extension is up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for updated notification should match snapshot for every possible styleguide platform 4`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for updated notification should match snapshot for every possible styleguide platform 5`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is added to _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your styles are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for updated notification should match snapshot when there are more than 1 events 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**2 colors** are updated in _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%2CanotherColorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&cid=anotherColorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;

exports[`styleguideColorHandler getTeamsMessage method for updated notification should match snapshot when there is only 1 event 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**colorName** is updated in _styleguideName_! 🗞",
  "sections": [
    {
      "text": "Make sure your stylesheets are up to date!",
      "images": []
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fcolors%3Fstid%3DstyleguideId%26cids%3DcolorId%26ref%3Dmicrosoft-teams"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/styleguide/styleguideId/colors?cid=colorId&ref=microsoft-teams"
        }
      ]
    }
  ]
}
`;
